--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,18 @@
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>7.1.0.Final</version>
-      <type>pom</type>
+      <version>6.5.2.Final</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.7.3</version>
+      <version>42.7.2</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
